<resources>
    <string name="app_name">MADE Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvPoster">Poster</string>
    <string name="tvBanner">Banner</string>
    <string name="tvMovies">Movies</string>
    <string name="tvTitle">Title</string>
    <string name="tvRating">Rating</string>
    <string name="tvRatingAverageCount">%1$s (%2$s)</string>
    <string name="tvReleasedOn">Released on: %1$s</string>
    <string name="tvStatus">Status</string>
    <string name="tvLanguage">Language</string>
    <string name="tvBullet">\u2022</string>
    <string name="tvRuntime">Runtime</string>
    <string name="tvCountry">Country</string>
    <string name="tvGenre">Genre(s)</string>
    <string name="tvShare">Share</string>
    <string name="tvReadMore">Read More</string>
    <string name="tvReadLess">Read Less</string>
    <string name="tvNowPlayingMovies">Now Playing Movies</string>
    <string name="tvDiscover">Discover</string>
    <string name="tvTrailer">Trailer Video</string>
    <string name="tvOverview">Overview</string>
    <string name="tvCast">Cast</string>
    <string name="tvSearch">Search…</string>
    <string name="tvNoSearchMovie">Oops!. You Haven\'t Search a Movie…</string>
    <string name="tvSearchMovie">Search your favorite movie to show them</string>
    <string name="tvReviews">Reviews</string>
    <string name="tvSimilarMovie">Similar Movies</string>
    <string name="tvRuntimeInTime">%dh %dm</string>
    <string name="tvNoOverview">No overview available</string>
    <string name="tvNoGenres">No genres available</string>
    <string name="tvNoCast">No cast available</string>
    <string name="tvNoReviews">No reviews available</string>
    <string name="tvNoSimilarMovie">No similar movies available</string>
    <string name="tvNoVideo">No trailer video available</string>
    <string name="tvOopsNoResults">Oops!. No Results Found…</string>
    <string name="tvNoSearchData">No results found for this query. Please use another query.</string>
    <string name="tvOops">Oops!. Something Went Wrong…</string>
    <string name="tvUnableLoadData">Unable to load data. Please try again.</string>
    <string name="tvNA">N/A</string>
    <string name="tvShareWith">Share with</string>
    <string name="tvVisitMovie">Visit this awesome movies \n%s</string>
    <string name="tvNameCharacter">%s \n (%s)</string>
    <string name="tvRetry">Retry</string>
</resources>