<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/layout_loading_home"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorOrange"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:text="@string/tvOops"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintVertical_bias=".45"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorOrange"
        android:textAlignment="center"
        android:textSize="13sp"
        tools:text="@string/tvNoOverview"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvErrorTitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tvRetry"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorOrange"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/tvError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>