<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground">

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintTop_toBottomOf="@id/cardPoster" />

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_movie_show"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvGenres"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPoster"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPoster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"/>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:paddingTop="10dp"
        android:maxLines="3"
        android:ellipsize="end"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/cardPoster"
        app:layout_constraintStart_toEndOf="@id/cardPoster"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/tvTitle"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReleasedOn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/tvReleasedOn"
        android:textSize="14sp"
        android:textColor="@color/colorGrey"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgRate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@null"
        app:layout_constraintTop_toBottomOf="@id/tvReleasedOn"
        app:layout_constraintStart_toStartOf="@id/tvReleasedOn"
        android:src="@drawable/ic_rate"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="start"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/imgRate"
        app:layout_constraintBottom_toBottomOf="@id/imgRate"
        app:layout_constraintStart_toEndOf="@id/imgRate"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        tools:text="@string/tvRating"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGenres"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/tvRating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvReleasedOn"
        app:layout_constraintEnd_toEndOf="@id/tvTitle"
        tools:text="@tools:sample/lorem"/>

</androidx.constraintlayout.widget.ConstraintLayout>